--- a/res/values-iw/strings.xml
+++ b/res/values-iw/strings.xml
@@ -1460,7 +1460,7 @@
     <string name="screensaver_settings_summary_either_long" msgid="371949139331896271">"במהלך טעינה או עגינה"</string>
     <string name="screensaver_settings_summary_either_short" msgid="2126139984738506920">"בשני המצבים"</string>
     <string name="screensaver_settings_summary_sleep" msgid="6555922932643037432">"במהלך טעינה"</string>
-    <string name="screensaver_settings_summary_dock" msgid="6997766385189369733">"במהלך עגינה"</string>
+    <string name="screensaver_settings_summary_dock" msgid="6997766385189369733">"בזמן עגינה"</string>
     <string name="screensaver_settings_summary_never" msgid="4988141393040918450">"אף פעם"</string>
     <string name="screensaver_settings_summary_off" msgid="8720357504939106923">"כבוי"</string>
     <string name="screensaver_settings_disabled_prompt" msgid="1166343194760238835">"כדי לשלוט במה שקורה כאשר הטלפון בעגינה ו/או במצב שינה, הפעל את שומר המסך."</string>
@@ -2457,7 +2457,7 @@
     <string name="accessibility_autoclick_longer_desc" msgid="2566025502981487443">"ארוך יותר"</string>
     <string name="accessibility_autoclick_seekbar_desc" msgid="8363959277814621118">"זמן לחיצה אוטומטית"</string>
     <string name="accessibility_vibration_settings_title" msgid="5198184603753129450">"עוצמת הרטט והמשוב הפיזי"</string>
-    <string name="accessibility_notification_vibration_title" msgid="6205679908785776478">"רטט ההתראות"</string>
+    <string name="accessibility_notification_vibration_title" msgid="6205679908785776478">"רטט של התראה"</string>
     <string name="accessibility_ring_vibration_title" msgid="4689811297654320885">"רטט הצלצול"</string>
     <string name="accessibility_touch_vibration_title" msgid="533931451319110741">"משוב מגע"</string>
     <string name="accessibility_service_primary_switch_title" msgid="437610853412159406">"שימוש באפליקציה <xliff:g id="ACCESSIBILITY_APP_NAME">%1$s</xliff:g>"</string>
@@ -3309,7 +3309,7 @@
     <string name="vpn_connect_to" msgid="216709261691085594">"התחברות אל <xliff:g id="PROFILE">%s</xliff:g>"</string>
     <string name="vpn_disconnect_confirm" msgid="6356789348816854539">"‏האם לנתק את ה-VPN הזה?"</string>
     <string name="vpn_disconnect" msgid="7753808961085867345">"ניתוק"</string>
-    <string name="vpn_version" msgid="41856553718304367">"גרסה <xliff:g id="VERSION">%s</xliff:g>"</string>
+    <string name="vpn_version" msgid="6344167191984400976">"גרסה"</string>
     <string name="vpn_forget_long" msgid="729132269203870205">"‏אני רוצה לשכוח את ה-VPN"</string>
     <string name="vpn_replace_vpn_title" msgid="3994226561866340280">"‏האם להחליף רשת VPN קיימת?"</string>
     <string name="vpn_set_vpn_title" msgid="1667539483005810682">"‏האם להגדיר את רשת ה-VPN בחיבור תמידי?"</string>
@@ -3783,7 +3783,7 @@
     <string name="zen_mode_other_options" msgid="3399967231522580421">"אפשרויות אחרות"</string>
     <string name="zen_mode_add" msgid="8789024026733232566">"הוספה"</string>
     <string name="zen_mode_enable_dialog_turn_on" msgid="1971034397501675078">"הפעלה"</string>
-    <string name="zen_mode_button_turn_on" msgid="6583862599681052347">"הפעלה עכשיו"</string>
+    <string name="zen_mode_button_turn_on" msgid="6583862599681052347">"הפעלה"</string>
     <string name="zen_mode_button_turn_off" msgid="2060862413234857296">"כיבוי עכשיו"</string>
     <string name="zen_mode_settings_dnd_manual_end_time" msgid="8251503918238985549">"המצב \'נא לא להפריע\' מופעל עד <xliff:g id="FORMATTED_TIME">%s</xliff:g>"</string>
     <string name="zen_mode_settings_dnd_manual_indefinite" msgid="1436568478062106132">"המצב \'נא לא להפריע\' ימשיך לפעול עד שמכבים אותו"</string>
@@ -3800,7 +3800,7 @@
     <string name="zen_mode_duration_summary_time_hours" msgid="2602655749780428308">"{count,plural, =1{שעה}two{שעתיים}many{# שעות}other{# שעות}}"</string>
     <string name="zen_mode_duration_summary_time_minutes" msgid="5755536844016835693">"{count,plural, =1{דקה אחת}two{# דקות}many{# דקות}other{# דקות}}"</string>
     <string name="zen_mode_sound_summary_off" msgid="7350437977839985836">"{count,plural, =0{מצב כבוי}=1{מצב כבוי. ניתן להפעיל לוח זמנים אחד באופן אוטומטי}two{מצב כבוי. ניתן להפעיל # לוחות זמנים באופן אוטומטי}many{מצב כבוי. ניתן להפעיל # לוחות זמנים באופן אוטומטי}other{מצב כבוי. ניתן להפעיל # לוחות זמנים באופן אוטומטי}}"</string>
-    <string name="zen_category_behavior" msgid="3214056473947178507">"מה יכול להפריע לתכונה \'נא לא להפריע\'"</string>
+    <string name="zen_category_behavior" msgid="3214056473947178507">"מה יכול להפריע כשהמכשיר במצב \'נא לא להפריע\'"</string>
     <string name="zen_category_people" msgid="8252926021894933047">"אנשים"</string>
     <string name="zen_category_apps" msgid="1167374545618451925">"אפליקציות"</string>
     <string name="zen_category_exceptions" msgid="1316097981052752811">"שעונים מעוררים והפרעות אחרות"</string>
@@ -4226,7 +4226,7 @@
     <string name="zen_mode_reminders_list" msgid="3133513621980999858">"תזכורות"</string>
     <string name="zen_mode_reminders_list_first" msgid="1130470396012190814">"תזכורות"</string>
     <string name="zen_mode_events" msgid="7425795679353531794">"אירועים ביומן"</string>
-    <string name="zen_mode_events_summary" msgid="3241903481309766428">"מאירועים צפויים ביומן"</string>
+    <string name="zen_mode_events_summary" msgid="3241903481309766428">"מאירועים קרובים ביומן"</string>
     <string name="zen_mode_events_list" msgid="7191316245742097229">"אירועים"</string>
     <string name="zen_mode_events_list_first" msgid="7425369082835214361">"אירועים"</string>
     <string name="zen_mode_bypassing_apps" msgid="625309443389126481">"ניתן לאפשר לאפליקציות לבטל הגדרה זו"</string>
@@ -5684,7 +5684,7 @@
     <string name="multiple_users_main_switch_title" msgid="2759849884417772712">"שימוש במשתמשים מרובים"</string>
     <string name="wireless_debugging_main_switch_title" msgid="8463499572781441719">"ניפוי באגים אלחוטי"</string>
     <string name="graphics_driver_main_switch_title" msgid="6125172901855813790">"שימוש בהעדפות של מנהל ההתקן לגרפיקה"</string>
-    <string name="battery_saver_main_switch_title" msgid="5072135547489779352">"שימוש במצב \'חיסכון בסוללה\'"</string>
+    <string name="battery_saver_main_switch_title" msgid="5072135547489779352">"מצב \'חיסכון בסוללה\'"</string>
     <string name="do_not_disturb_main_switch_title_on" msgid="6965566556539821313">"כיבוי"</string>
     <string name="do_not_disturb_main_switch_title_off" msgid="7088088515823752545">"הפעלה"</string>
     <string name="night_light_main_switch_title" msgid="3428298022467805219">"שימוש בתאורת לילה"</string>
