--- a/res/values-ta/strings.xml
+++ b/res/values-ta/strings.xml
@@ -2857,7 +2857,7 @@
     <string name="battery_saver_auto_percentage" msgid="558533724806281980">"சதவீதத்தின் அடிப்படையில்"</string>
     <string name="battery_saver_auto_routine_summary" msgid="3913145448299472628">"உங்கள் பேட்டரி தீர்ந்துபோகும் நிலையில் இருக்கும்போது வழக்கமான அடுத்த ரீசார்ஜுக்கு முன்பு பேட்டரி சேமிப்பான் ஆன் செய்யப்படும்."</string>
     <string name="battery_saver_auto_percentage_summary" msgid="6190884450723824287">"<xliff:g id="PERCENT">%1$s</xliff:g> ஆக இருக்கும்போது ஆன் செய்யப்படும்"</string>
-    <string name="battery_saver_schedule_settings_title" msgid="3688019979950082237">"பேட்டரி சேமிப்பு திட்டமிடல்"</string>
+    <string name="battery_saver_schedule_settings_title" msgid="3688019979950082237">"பேட்டரி சேமிப்பைத் திட்டமிடல்"</string>
     <string name="battery_saver_turn_on_summary" msgid="1433919417587171160">"பேட்டரி ஆயுளை நீட்டிக்கும்"</string>
     <string name="battery_saver_sticky_title_new" msgid="5942813274115684599">"சார்ஜ் ஆனதும் ஆஃப் செய்"</string>
     <string name="battery_saver_sticky_description_new" product="default" msgid="492221102651829607">"<xliff:g id="NUMBER">^1</xliff:g><xliff:g id="UNIT">%</xliff:g>க்கு மேல் மொபைல் சார்ஜ் ஆனதும் பேட்டரி சேமிப்பான் ஆஃப் ஆகிவிடும்"</string>
@@ -3227,7 +3227,7 @@
     <string name="vpn_connect_to" msgid="216709261691085594">"<xliff:g id="PROFILE">%s</xliff:g> உடன் இணை"</string>
     <string name="vpn_disconnect_confirm" msgid="6356789348816854539">"VPNஐத் துண்டிக்கவா?"</string>
     <string name="vpn_disconnect" msgid="7753808961085867345">"தொடர்பைத் துண்டி"</string>
-    <string name="vpn_version" msgid="41856553718304367">"பதிப்பு <xliff:g id="VERSION">%s</xliff:g>"</string>
+    <string name="vpn_version" msgid="6344167191984400976">"பதிப்பு"</string>
     <string name="vpn_forget_long" msgid="729132269203870205">"VPNஐ நீக்கு"</string>
     <string name="vpn_replace_vpn_title" msgid="3994226561866340280">"தற்போதுள்ள VPNஐ மாற்றியமைக்கவா?"</string>
     <string name="vpn_set_vpn_title" msgid="1667539483005810682">"எப்போதும் இயங்கும் VPNஐ அமைக்கவா?"</string>
@@ -3857,7 +3857,7 @@
       <item quantity="other"><xliff:g id="COUNT_1">%d</xliff:g> முன்னுரிமை அளிக்கப்பட்ட உரையாடல்கள்</item>
       <item quantity="one"><xliff:g id="COUNT_0">%d</xliff:g> முன்னுரிமை அளிக்கப்பட்ட உரையாடல்</item>
     </plurals>
-    <string name="important_conversations" msgid="1233893707189659401">"முன்னுரிமை அளிக்கப்பட்ட உரையாடல்கள்"</string>
+    <string name="important_conversations" msgid="1233893707189659401">"முக்கிய உரையாடல்கள்"</string>
     <string name="important_conversations_summary_bubbles" msgid="614327166808117644">"உரையாடல் பிரிவின் மேற்பகுதியில் மிதக்கும் குமிழ்களாகக் காட்டும்"</string>
     <string name="important_conversations_summary" msgid="3184022761562676418">"உரையாடல் பிரிவின் மேற்பகுதியில் காட்டும்"</string>
     <string name="other_conversations" msgid="551178916855139870">"முன்னுரிமை அளிக்கப்படாத உரையாடல்கள்"</string>
@@ -5423,7 +5423,7 @@
     <string name="media_controls_recommendations_title" msgid="184225835236807677">"மீடியா தொடர்பான பரிந்துரைகளைக் காட்டுதல்"</string>
     <string name="media_controls_recommendations_description" msgid="7596498733126824030">"உங்கள் செயல்பாட்டின் அடிப்படையில் பரிந்துரைக்கும்"</string>
     <string name="media_controls_hide_player" msgid="2751439192580884015">"பிளேயர் மறை"</string>
-    <string name="media_controls_show_player" msgid="8504571042365814021">"பிளேயரைக் காட்டு"</string>
+    <string name="media_controls_show_player" msgid="8504571042365814021">"பிளேயரைக் காட்டும்"</string>
     <string name="keywords_media_controls" msgid="8345490568291778638">"மீடியா"</string>
     <string name="connected_device_see_all_summary" msgid="2056010318537268108">"புளூடூத் ஆன் செய்யப்படும்"</string>
     <string name="bluetooth_setting_on" msgid="4808458394436224124">"ஆன்"</string>
