--- a/res/values-da/strings.xml
+++ b/res/values-da/strings.xml
@@ -1303,8 +1303,8 @@
     <string name="auto_rotate_option_face_based" msgid="3438645484087953174">"Til – ansigtsbaseret"</string>
     <string name="auto_rotate_switch_face_based" msgid="7824467067774120000">"Aktivér ansigtsgenkendelse"</string>
     <string name="color_mode_title" msgid="8666690832113906028">"Farver"</string>
-    <string name="color_mode_option_natural" msgid="6192875655101283303">"Naturlig"</string>
-    <string name="color_mode_option_boosted" msgid="4698797857766774289">"Forstærket"</string>
+    <string name="color_mode_option_natural" msgid="6192875655101283303">"Naturlige"</string>
+    <string name="color_mode_option_boosted" msgid="4698797857766774289">"Forstærkede"</string>
     <string name="color_mode_option_saturated" msgid="3413853820158447300">"Mættet"</string>
     <string name="color_mode_option_automatic" msgid="2281217686509980870">"Selvjusterende"</string>
     <string name="color_mode_summary_natural" msgid="8298840714001791628">"Anvend kun nøjagtige farver"</string>
@@ -3227,7 +3227,7 @@
     <string name="vpn_connect_to" msgid="216709261691085594">"Opret forbindelse til <xliff:g id="PROFILE">%s</xliff:g>"</string>
     <string name="vpn_disconnect_confirm" msgid="6356789348816854539">"Vil du afbryde dette VPN?"</string>
     <string name="vpn_disconnect" msgid="7753808961085867345">"Afbryd"</string>
-    <string name="vpn_version" msgid="41856553718304367">"Version <xliff:g id="VERSION">%s</xliff:g>"</string>
+    <string name="vpn_version" msgid="6344167191984400976">"Version"</string>
     <string name="vpn_forget_long" msgid="729132269203870205">"Glem VPN"</string>
     <string name="vpn_replace_vpn_title" msgid="3994226561866340280">"Erstat det eksisterende VPN-netværk?"</string>
     <string name="vpn_set_vpn_title" msgid="1667539483005810682">"Vil du konfigurere konstant VPN?"</string>
@@ -4517,7 +4517,7 @@
     <string name="camera_gesture_desc" msgid="7557645057320805328">"Åbn kameraappen ved at dreje håndleddet to gange"</string>
     <string name="camera_double_tap_power_gesture_title" msgid="8264757967127716261">"Tryk to gange på afbryderknappen for at åbne kameraet"</string>
     <string name="camera_double_tap_power_gesture_desc" msgid="1539147023700755155">"Åbn hurtigt kameraet uden at låse skærmen op"</string>
-    <string name="screen_zoom_title" msgid="6928045302654960559">"Visningsstørrelse"</string>
+    <string name="screen_zoom_title" msgid="6928045302654960559">"Skærmstørrelse"</string>
     <string name="screen_zoom_short_summary" msgid="2458636490408833800">"Gør elementerne på skærmen større eller mindre"</string>
     <string name="screen_zoom_keywords" msgid="5964023524422386592">"visningstæthed, zoom på skærmen, skala, skalering"</string>
     <string name="screen_zoom_summary" msgid="1362984939045594989">"Gør elementerne på skærmen mindre eller større. Visse apps på din skærm ændrer muligvis placering."</string>
@@ -4853,7 +4853,7 @@
     <string name="ambient_display_pickup_title" product="tablet" msgid="8055486872070888377">"Løft for at tjekke din tablet"</string>
     <string name="ambient_display_pickup_title" product="device" msgid="8980156994848721455">"Løft for at tjekke enheden"</string>
     <string name="ambient_display_wake_screen_title" msgid="7637678749035378085">"Aktivering af skærm"</string>
-    <string name="ambient_display_pickup_summary" product="default" msgid="1087355013674109242">"Se klokkeslæt, notifikationer og andre oplysninger, når du samler din telefon op."</string>
+    <string name="ambient_display_pickup_summary" product="default" msgid="1087355013674109242">"Løft din telefon for at se klokkeslæt, notifikationer og andre oplysninger."</string>
     <string name="ambient_display_pickup_summary" product="tablet" msgid="2589556997034530529">"Se klokkeslæt, notifikationer og andre oplysninger, når du samler din tablet op."</string>
     <string name="ambient_display_pickup_summary" product="device" msgid="1916011370011115627">"Se klokkeslæt, notifikationer og andre oplysninger, når du samler din enhed op."</string>
     <string name="ambient_display_tap_screen_title" product="default" msgid="2811332293938467179">"Tryk for at tjekke telefonen"</string>
