--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -53,7 +53,7 @@
     <string name="font_size_make_smaller_desc" msgid="4978038055549590140">"Verkleinern"</string>
     <string name="font_size_make_larger_desc" msgid="5583046033381722247">"Vergrößern"</string>
     <string name="auto_rotate_settings_primary_switch_title" msgid="3151963020165952847">"„Automatisch drehen“ verwenden"</string>
-    <string name="smart_rotate_text_headline" msgid="436277795183609578">"Bei der Gesichtserkennung wird die Kamera auf der Vorderseite verwendet, um die Genauigkeit beim automatischen Drehen zu verbessern. Bilder weder gespeichert noch an Google gesendet."</string>
+    <string name="smart_rotate_text_headline" msgid="436277795183609578">"Bei der Gesichtserkennung wird die Kamera auf der Vorderseite verwendet, um die Genauigkeit beim automatischen Drehen zu verbessern. Bilder werden weder gespeichert noch an Google gesendet."</string>
     <string name="font_size_preview_text_headline" msgid="1173103737980511652">"Beispieltext"</string>
     <string name="font_size_preview_text_title" msgid="6363561029914452382">"Der Zauberer von Oz"</string>
     <string name="font_size_preview_text_subtitle" msgid="5806349524325544614">"Kapitel 11: Die wundervolle Smaragdstadt von Oz"</string>
@@ -1018,7 +1018,7 @@
     <string name="passpoint_label" msgid="6513669696739302866">"Gespeichert über"</string>
     <string name="passpoint_content" msgid="5219226173518418335">"Anmeldedaten für <xliff:g id="NAME">%1$s</xliff:g>"</string>
     <string name="wifi_eap_method" msgid="3776009521349381742">"EAP-Methode"</string>
-    <string name="please_select_phase2" msgid="577633852089847142">"Phase 2-Authentifizierung"</string>
+    <string name="please_select_phase2" msgid="577633852089847142">"Phase-2-Authentifizierung"</string>
     <string name="wifi_eap_ca_cert" msgid="8033404008276298886">"CA-Zertifikat"</string>
     <string name="wifi_eap_ocsp" msgid="8713933962516871238">"Online-Zertifikatstatus"</string>
     <string name="wifi_eap_domain" msgid="8304301470752333203">"Domain"</string>
@@ -3230,7 +3230,7 @@
     <string name="vpn_connect_to" msgid="216709261691085594">"Mit <xliff:g id="PROFILE">%s</xliff:g> verbinden"</string>
     <string name="vpn_disconnect_confirm" msgid="6356789348816854539">"Verbindung zu diesem VPN trennen?"</string>
     <string name="vpn_disconnect" msgid="7753808961085867345">"Verbindung trennen"</string>
-    <string name="vpn_version" msgid="41856553718304367">"Version <xliff:g id="VERSION">%s</xliff:g>"</string>
+    <string name="vpn_version" msgid="6344167191984400976">"Version"</string>
     <string name="vpn_forget_long" msgid="729132269203870205">"VPN entfernen"</string>
     <string name="vpn_replace_vpn_title" msgid="3994226561866340280">"Aktuelles VPN ersetzen?"</string>
     <string name="vpn_set_vpn_title" msgid="1667539483005810682">"Durchgehend aktives VPN aktivieren?"</string>
@@ -4308,7 +4308,7 @@
     <string name="unused_apps_switch" msgid="419282628373205038">"Berechtigungen löschen und Speicherplatz freigeben"</string>
     <string name="filter_all_apps" msgid="6645539744080251371">"Alle Apps"</string>
     <string name="filter_enabled_apps" msgid="8868356616126759124">"Installierte Apps"</string>
-    <string name="filter_instant_apps" msgid="2292108467020380068">"Instant-Apps"</string>
+    <string name="filter_instant_apps" msgid="2292108467020380068">"Instant Apps"</string>
     <string name="filter_notif_all_apps" msgid="2764590815789208306">"Apps: alle"</string>
     <string name="filter_notif_blocked_apps" msgid="1065653868850012325">"Deaktiviert"</string>
     <string name="filter_notif_urgent_channels" msgid="875381675739324318">"Kategorien: sehr hohe Wichtigkeit"</string>
@@ -4888,10 +4888,10 @@
     <string name="oem_unlock_enable_disabled_summary_sim_locked_device" msgid="168124660162907358">"Auf vom Mobilfunkanbieter gesperrten Geräten nicht verfügbar"</string>
     <string name="oem_lock_info_message" msgid="8843145669619429197">"Starte das Gerät neu, um die Geräteschutzfunktion zu aktivieren."</string>
     <string name="automatic_storage_manager_freed_bytes" msgid="706230592123831676">"Insgesamt <xliff:g id="SIZE">%1$s</xliff:g> freigegeben\n\nZuletzt ausgeführt am <xliff:g id="DATE">%2$s</xliff:g>"</string>
-    <string name="web_action_enable_title" msgid="6654581786741216382">"Instant-Apps"</string>
+    <string name="web_action_enable_title" msgid="6654581786741216382">"Instant Apps"</string>
     <string name="web_action_enable_summary" msgid="2658930257777545990">"Links in Apps öffnen, ohne dass die Apps dazu installiert sein müssen"</string>
-    <string name="web_action_section_title" msgid="994717569424234098">"Instant-Apps"</string>
-    <string name="instant_apps_settings" msgid="4280942494969957858">"Instant-Apps-Einstellungen"</string>
+    <string name="web_action_section_title" msgid="994717569424234098">"Instant Apps"</string>
+    <string name="instant_apps_settings" msgid="4280942494969957858">"Instant Apps-Einstellungen"</string>
     <string name="domain_url_section_title" msgid="9028890472923474958">"Installierte Apps"</string>
     <string name="automatic_storage_manager_activation_warning" msgid="170508173207142665">"Dein Speicher wird jetzt vom Speichermanager verwaltet"</string>
     <string name="account_for_section_header" msgid="7466759342105251096">"Konten für <xliff:g id="USER_NAME">%1$s</xliff:g>"</string>
@@ -5005,7 +5005,7 @@
     <string name="storage_usage_summary" msgid="4591121727356723463">"<xliff:g id="NUMBER">%1$s</xliff:g> <xliff:g id="UNIT">%2$s</xliff:g> belegt"</string>
     <string name="storage_total_summary" msgid="7163360249534964272">"Insgesamt <xliff:g id="NUMBER">%1$s</xliff:g> <xliff:g id="UNIT">%2$s</xliff:g>"</string>
     <string name="clear_instant_app_data" msgid="5951258323364386357">"App löschen"</string>
-    <string name="clear_instant_app_confirmation" msgid="3964731334459209482">"Möchtest du diese Instant-App entfernen?"</string>
+    <string name="clear_instant_app_confirmation" msgid="3964731334459209482">"Möchtest du diese Instant App entfernen?"</string>
     <string name="launch_instant_app" msgid="8503927414339606561">"Öffnen"</string>
     <string name="game_storage_settings" msgid="2521393115726178837">"Spiele"</string>
     <string name="app_info_storage_title" msgid="4076977173803093808">"Belegter Speicherplatz"</string>
@@ -5037,7 +5037,7 @@
     <string name="storage_manager_indicator" msgid="6187509172735927297">"Speichermanager: <xliff:g id="STATUS">^1</xliff:g>"</string>
     <string name="storage_manager_indicator_off" msgid="2705959642617709265">"Aus"</string>
     <string name="storage_manager_indicator_on" msgid="8380330763647785309">"An"</string>
-    <string name="install_type_instant" msgid="7685381859060486009">"Instant-App"</string>
+    <string name="install_type_instant" msgid="7685381859060486009">"Instant App"</string>
     <string name="automatic_storage_manager_deactivation_warning" msgid="4905106133215702099">"Speichermanager deaktivieren?"</string>
     <string name="storage_movies_tv" msgid="7897612625450668593">"Film- und TV-Apps"</string>
     <string name="carrier_provisioning" msgid="7217868336140325816">"Informationen zur Nutzerverwaltung durch den Anbieter"</string>
