--- a/res/values-hy/strings.xml
+++ b/res/values-hy/strings.xml
@@ -1341,7 +1341,7 @@
     <string name="peak_refresh_rate_title" msgid="1878771412897140903">"Սահուն պատկեր"</string>
     <string name="peak_refresh_rate_summary" msgid="1527087897198455042">"Որոշակի բովանդակության համար թարմացման հաճախականությունը 60-ից կդառնա 90 Հց։ Երկարացնում է մարտկոցի օգտագործման ժամանակը։"</string>
     <string name="force_high_refresh_rate_toggle" msgid="3325789621928312050">"Պարտադիր թարմացման առավելագույն հաճախականությունը"</string>
-    <string name="force_high_refresh_rate_desc" msgid="7794566420873814875">"Էկրանի թարմացման բարձր հաճախականությունը լավացնում է հպման արձագանքը և շարժանկարների որակը։ Այն նաև երկարացնում է մարտկոցի օգտագործման ժամանակը։"</string>
+    <string name="force_high_refresh_rate_desc" msgid="7794566420873814875">"Էկրանի թարմացման բարձր հաճախականությունը լավացնում է հապտիկ արձագանքը և շարժանկարների որակը։ Այն նաև երկարացնում է մարտկոցի օգտագործման ժամանակը։"</string>
     <string name="adaptive_sleep_title" msgid="2987961991423539233">"Ադապտիվ քնի ռեժիմ"</string>
     <string name="adaptive_sleep_summary_on" msgid="313187971631243800">"Միացված է – Եթե նայում եք էկրանին, այն չի անջատվի։"</string>
     <string name="adaptive_sleep_summary_off" msgid="5272156339202897523">"Անջատված է"</string>
@@ -2409,7 +2409,7 @@
     <string name="accessibility_vibration_settings_title" msgid="5198184603753129450">"Թրթռոցի ուժգնություն"</string>
     <string name="accessibility_notification_vibration_title" msgid="6205679908785776478">"Թրթռոց ծանուցման ժամանակ"</string>
     <string name="accessibility_ring_vibration_title" msgid="4689811297654320885">"Թրթռազանգ"</string>
-    <string name="accessibility_touch_vibration_title" msgid="533931451319110741">"Հպման արձագանք"</string>
+    <string name="accessibility_touch_vibration_title" msgid="533931451319110741">"Հապտիկ արձագանք"</string>
     <string name="accessibility_service_primary_switch_title" msgid="437610853412159406">"Օգտագործել <xliff:g id="ACCESSIBILITY_APP_NAME">%1$s</xliff:g>-ը"</string>
     <string name="accessibility_service_primary_open_title" msgid="8655108684769091154">"Բացել <xliff:g id="ACCESSIBILITY_APP_NAME">%1$s</xliff:g> հավելվածը"</string>
     <string name="accessibility_daltonizer_primary_switch_title" msgid="32064721588910540">"Օգտագործել գունաշտկումը"</string>
@@ -3227,7 +3227,7 @@
     <string name="vpn_connect_to" msgid="216709261691085594">"Միանալ <xliff:g id="PROFILE">%s</xliff:g>-ին"</string>
     <string name="vpn_disconnect_confirm" msgid="6356789348816854539">"Անջատե՞լ այս VPN-ը:"</string>
     <string name="vpn_disconnect" msgid="7753808961085867345">"Անջատել"</string>
-    <string name="vpn_version" msgid="41856553718304367">"Տարբերակ <xliff:g id="VERSION">%s</xliff:g>"</string>
+    <string name="vpn_version" msgid="6344167191984400976">"Տարբերակ"</string>
     <string name="vpn_forget_long" msgid="729132269203870205">"Մոռանալ VPN-ը"</string>
     <string name="vpn_replace_vpn_title" msgid="3994226561866340280">"Փոխարինե՞լ ընթացիկ VPN-ը:"</string>
     <string name="vpn_set_vpn_title" msgid="1667539483005810682">"Սահմանե՞լ որպես «միշտ միացված» VPN:"</string>
@@ -3588,8 +3588,8 @@
     <string name="keywords_ambient_display" msgid="3149287105145443697">"մուտքային ծանուցում"</string>
     <string name="keywords_hotspot_tethering" msgid="3688439689671232627">"USB մոդեմ, Bluetooth մոդեմ, Wi-Fi թեժ կետ"</string>
     <string name="keywords_touch_vibration" msgid="1125291201902251273">"հանգիստ, թրթռալ, էկրան, զգայունություն"</string>
-    <string name="keywords_ring_vibration" msgid="1736301626537417541">"հպման արձագանք, թրթռոց, հեռախոս, զանգ, զգայունություն, զանգել"</string>
-    <string name="keywords_notification_vibration" msgid="9162262178415439951">"հպման արձագանք, թրթռոց, զգայունություն"</string>
+    <string name="keywords_ring_vibration" msgid="1736301626537417541">"հապտիկ արձագանք, թրթռոց, հեռախոս, զանգ, զգայունություն, զանգել"</string>
+    <string name="keywords_notification_vibration" msgid="9162262178415439951">"հապտիկ արձագանք, թրթռոց, զգայունություն"</string>
     <string name="keywords_battery_saver_sticky" msgid="1646191718840975110">"մարտկոցի տնտեսում, մշտական, էներգախնայում, մարտկոց"</string>
     <string name="keywords_battery_saver_schedule" msgid="8240483934368455930">"գործողությունների հերթականություն, ժամանակացույց, մարտկոցի տնտեսում, էներգախնայում, մարտկոց, ավտոմատ, տոկոս"</string>
     <string name="keywords_enhance_4g_lte" msgid="658889360486800978">"volte, ընդլայնված հնարավորություններով զանգեր, 4g զանգեր"</string>
@@ -4059,7 +4059,7 @@
     <string name="zen_mode_schedule_rule_days" msgid="8633770815307716351">"Օրեր"</string>
     <string name="zen_mode_schedule_rule_days_none" msgid="5636604196262227070">"Չկան"</string>
     <string name="zen_mode_schedule_rule_days_all" msgid="1583884351893245169">"Ամեն օր"</string>
-    <string name="zen_mode_schedule_alarm_title" msgid="305237266064819345">"Զարթուցիչը կարող է հնչել ավելի շուտ, քան կսպառվի ժամանակը"</string>
+    <string name="zen_mode_schedule_alarm_title" msgid="305237266064819345">"Անջատել զարթուցիչի հետ"</string>
     <string name="zen_mode_schedule_alarm_summary" msgid="9162760856136645133">"Ժամանակացույցն անջատվում է, երբ միանում է զարթուցիչը"</string>
     <string name="zen_mode_custom_behavior_title" msgid="92525364576358085">"«Չանհանգստաց­­­­­նել» ռեժիմի կարգավորումներ"</string>
     <string name="zen_mode_custom_behavior_summary_default" msgid="3259312823717839148">"Օգտագործել կանխադրված կարգավորումները"</string>
@@ -5420,7 +5420,7 @@
     <string name="media_controls_title" msgid="403271085636252597">"Մեդիա"</string>
     <string name="media_controls_resume_title" msgid="855076860336652370">"Ամրացնել մեդիա նվագարկիչը"</string>
     <string name="media_controls_resume_description" msgid="3163482266454802097">"Մեդիա նվագարկիչը բաց է մնում Արագ կարգավորումներում, որպեսզի դուք կարողանաք անմիջապես վերսկսել նվագարկումը։"</string>
-    <string name="media_controls_recommendations_title" msgid="184225835236807677">"Ցույց տալ մեդիա բովանդակության առաջարկները"</string>
+    <string name="media_controls_recommendations_title" msgid="184225835236807677">"Ցույց տալ մեդիա բովանդակության առաջարկներ"</string>
     <string name="media_controls_recommendations_description" msgid="7596498733126824030">"Ձեր գործողությունների հիման վրա"</string>
     <string name="media_controls_hide_player" msgid="2751439192580884015">"Թաքցնել նվագարկիչը"</string>
     <string name="media_controls_show_player" msgid="8504571042365814021">"Ցուցադրել նվագարկիչը"</string>
