--- a/res/values-is/strings.xml
+++ b/res/values-is/strings.xml
@@ -3227,7 +3227,7 @@
     <string name="vpn_connect_to" msgid="216709261691085594">"Tengjast <xliff:g id="PROFILE">%s</xliff:g>"</string>
     <string name="vpn_disconnect_confirm" msgid="6356789348816854539">"Aftengja þessa VPN-tengingu?"</string>
     <string name="vpn_disconnect" msgid="7753808961085867345">"Aftengja"</string>
-    <string name="vpn_version" msgid="41856553718304367">"Útgáfa <xliff:g id="VERSION">%s</xliff:g>"</string>
+    <string name="vpn_version" msgid="6344167191984400976">"Útgáfa"</string>
     <string name="vpn_forget_long" msgid="729132269203870205">"Gleyma VPN"</string>
     <string name="vpn_replace_vpn_title" msgid="3994226561866340280">"Skipta út núverandi VPN?"</string>
     <string name="vpn_set_vpn_title" msgid="1667539483005810682">"Velja VPN sem alltaf er kveikt á?"</string>
@@ -4050,7 +4050,7 @@
     <string name="zen_mode_event_rule_summary_reply_template" msgid="7786137431469077008">"Þar sem svarið er <xliff:g id="REPLY">%1$s</xliff:g>"</string>
     <string name="zen_mode_event_rule_calendar_any" msgid="5152139705998281205">"Öll dagatöl"</string>
     <string name="zen_mode_event_rule_reply" msgid="6099405414361340225">"Þar sem svarið er"</string>
-    <string name="zen_mode_event_rule_reply_any_except_no" msgid="4672746760505346596">"„Já“, „Kannski“ eða „Ekki svarað“"</string>
+    <string name="zen_mode_event_rule_reply_any_except_no" msgid="4672746760505346596">"Já, Kannski eða Ekki svarað"</string>
     <string name="zen_mode_event_rule_reply_yes_or_maybe" msgid="6584448788100186574">"Já eða Kannski"</string>
     <string name="zen_mode_event_rule_reply_yes" msgid="7812120982734551236">"Já"</string>
     <string name="zen_mode_rule_not_found_text" msgid="5303667326973891036">"Regla fannst ekki."</string>
