--- a/res/values-mk/strings.xml
+++ b/res/values-mk/strings.xml
@@ -1303,7 +1303,7 @@
     <string name="auto_rotate_option_off" msgid="2788096269396290731">"Исклучено"</string>
     <string name="auto_rotate_option_on" msgid="5776678230808498171">"Вклучено"</string>
     <string name="auto_rotate_option_face_based" msgid="3438645484087953174">"Вклучено - според лице"</string>
-    <string name="auto_rotate_switch_face_based" msgid="7824467067774120000">"Овозможи откривање лица"</string>
+    <string name="auto_rotate_switch_face_based" msgid="7824467067774120000">"Овозможи „Откривање лица“"</string>
     <string name="color_mode_title" msgid="8666690832113906028">"Бои"</string>
     <string name="color_mode_option_natural" msgid="6192875655101283303">"Природни"</string>
     <string name="color_mode_option_boosted" msgid="4698797857766774289">"Нагласени"</string>
@@ -3229,7 +3229,7 @@
     <string name="vpn_connect_to" msgid="216709261691085594">"Поврзи се со <xliff:g id="PROFILE">%s</xliff:g>"</string>
     <string name="vpn_disconnect_confirm" msgid="6356789348816854539">"Да се исклучи оваа VPN?"</string>
     <string name="vpn_disconnect" msgid="7753808961085867345">"Прекини врска"</string>
-    <string name="vpn_version" msgid="41856553718304367">"Верзија <xliff:g id="VERSION">%s</xliff:g>"</string>
+    <string name="vpn_version" msgid="6344167191984400976">"Верзија"</string>
     <string name="vpn_forget_long" msgid="729132269203870205">"Заборави VPN"</string>
     <string name="vpn_replace_vpn_title" msgid="3994226561866340280">"Да се замени постојната VPN?"</string>
     <string name="vpn_set_vpn_title" msgid="1667539483005810682">"Да се постави „секогаш вклучена“ VPN?"</string>
@@ -4064,7 +4064,7 @@
     <string name="zen_mode_schedule_alarm_title" msgid="305237266064819345">"Алармот може да го игнорира времето на завршување"</string>
     <string name="zen_mode_schedule_alarm_summary" msgid="9162760856136645133">"Распоредот се исклучува кога ќе заѕвони аларм"</string>
     <string name="zen_mode_custom_behavior_title" msgid="92525364576358085">"Однесување на „Не вознемирувај“"</string>
-    <string name="zen_mode_custom_behavior_summary_default" msgid="3259312823717839148">"Користете стандардни поставки"</string>
+    <string name="zen_mode_custom_behavior_summary_default" msgid="3259312823717839148">"Користи стандардни поставки"</string>
     <string name="zen_mode_custom_behavior_summary" msgid="5390522750884328843">"Создајте приспособени поставки за распоредов"</string>
     <string name="zen_mode_custom_behavior_category_title" msgid="7815612569425733764">"За „<xliff:g id="SCHEDULE_NAME">%1$s</xliff:g>“"</string>
     <string name="summary_divider_text" msgid="8836285171484563986">", "</string>
@@ -4124,9 +4124,9 @@
     <string name="zen_mode_events_list" msgid="7191316245742097229">"настани"</string>
     <string name="zen_mode_events_list_first" msgid="7425369082835214361">"Настани"</string>
     <string name="zen_mode_bypassing_apps" msgid="625309443389126481">"Дозволете апликациите да занемаруваат"</string>
-    <string name="zen_mode_bypassing_apps_header" msgid="60083006963906906">"Апликации што може да го прекинуваат"</string>
+    <string name="zen_mode_bypassing_apps_header" msgid="60083006963906906">"Апликации што може да го прекинуваат режимот"</string>
     <string name="zen_mode_bypassing_apps_add_header" msgid="3201829605075172536">"Изберете повеќе апликации"</string>
-    <string name="zen_mode_bypassing_apps_none" msgid="7944221631721778096">"Нема избрани апликации"</string>
+    <string name="zen_mode_bypassing_apps_none" msgid="7944221631721778096">"Не се избрани апликации"</string>
     <string name="zen_mode_bypassing_apps_subtext_none" msgid="5128770411598722200">"Апликациите не може да го прекинуваат"</string>
     <string name="zen_mode_bypassing_apps_add" msgid="5031919618521327102">"Додајте апликации"</string>
     <string name="zen_mode_bypassing_apps_summary_all" msgid="4684544706511555744">"Сите известувања"</string>
