--- a/res/values-pt-rBR/strings.xml
+++ b/res/values-pt-rBR/strings.xml
@@ -1371,7 +1371,7 @@
     <string name="night_display_temperature_title" msgid="857248782470764263">"Intensidade"</string>
     <string name="night_display_summary_off_auto_mode_never" msgid="7406899634169354142">"Nunca será ativado automaticamente"</string>
     <string name="night_display_summary_off_auto_mode_custom" msgid="6667008039080687931">"Será ativada automaticamente às <xliff:g id="ID_1">%1$s</xliff:g>"</string>
-    <string name="night_display_summary_off_auto_mode_twilight" msgid="3669132200611324994">"Será ativada automaticamente ao anoitecer"</string>
+    <string name="night_display_summary_off_auto_mode_twilight" msgid="3669132200611324994">"Será ativado automaticamente ao anoitecer"</string>
     <string name="night_display_summary_on_auto_mode_never" msgid="832333009202889350">"Nunca será desativado automaticamente"</string>
     <string name="night_display_summary_on_auto_mode_custom" msgid="2096677025343425755">"Será desativado automaticamente às <xliff:g id="ID_1">%1$s</xliff:g>"</string>
     <string name="night_display_summary_on_auto_mode_twilight" msgid="8070517472000680361">"Será desativado automaticamente ao amanhecer"</string>
@@ -1389,13 +1389,13 @@
     <string name="dark_ui_activation_on_auto" msgid="4824339634784765049">"Ativar até o amanhecer"</string>
     <string name="dark_ui_activation_off_auto" msgid="9136717444658505208">"Desativar até anoitecer"</string>
     <string name="dark_ui_title" msgid="3373976268671557416">"Modo escuro"</string>
-    <string name="dark_ui_auto_mode_title" msgid="9027528859262295099">"Programar"</string>
-    <string name="dark_ui_auto_mode_never" msgid="3980412582267787662">"Nenhum"</string>
+    <string name="dark_ui_auto_mode_title" msgid="9027528859262295099">"Programação"</string>
+    <string name="dark_ui_auto_mode_never" msgid="3980412582267787662">"Nenhuma"</string>
     <string name="dark_ui_auto_mode_auto" msgid="6658909029498623375">"Ativ. do anoitecer ao amanhecer"</string>
-    <string name="dark_ui_auto_mode_custom" msgid="3800138185265182170">"Ativado nos horários definidos"</string>
+    <string name="dark_ui_auto_mode_custom" msgid="3800138185265182170">"Ativada nos horários definidos"</string>
     <string name="dark_ui_status_title" msgid="3505119141437774329">"Status"</string>
     <string name="dark_ui_summary_off_auto_mode_never" msgid="5828281549475697398">"Nunca será ativado automaticamente"</string>
-    <string name="dark_ui_summary_off_auto_mode_auto" msgid="6766831395970887213">"Será ativada automaticamente ao anoitecer"</string>
+    <string name="dark_ui_summary_off_auto_mode_auto" msgid="6766831395970887213">"Será ativado automaticamente ao anoitecer"</string>
     <string name="dark_ui_summary_off_auto_mode_custom" msgid="1345906088326708376">"Será ativado automaticamente: <xliff:g id="ID_1">%1$s</xliff:g>"</string>
     <string name="dark_ui_summary_on_auto_mode_never" msgid="2468597062391435521">"Nunca será desativado automaticamente"</string>
     <string name="dark_ui_summary_on_auto_mode_auto" msgid="5553376115092648636">"Será desativado automaticamente ao amanhecer"</string>
@@ -2272,7 +2272,7 @@
     <string name="accessibility_settings_title" msgid="6739115703615065716">"Configurações de acessibilidade"</string>
     <string name="accessibility_settings_summary" msgid="2366627644570558503">"Exibição, interação, áudio"</string>
     <string name="vision_settings_title" msgid="8919983801864103069">"Configuração visual"</string>
-    <string name="vision_settings_description" msgid="7614894785054441991">"É possível personalizar este dispositivo para atender às suas necessidades. Esses recursos de acessibilidade podem ser alterados posteriormente em \"Configurar\"."</string>
+    <string name="vision_settings_description" msgid="7614894785054441991">"Você pode personalizar este dispositivo do jeito que quiser. Esses recursos de acessibilidade podem ser alterados depois nas Configurações."</string>
     <string name="vision_settings_suggestion_title" msgid="4689275412658803919">"Mudar o tamanho da fonte"</string>
     <string name="screen_reader_category_title" msgid="5825700839731107803">"Leitor de tela"</string>
     <string name="captions_category_title" msgid="574490148949400274">"Legendas"</string>
@@ -3229,7 +3229,7 @@
     <string name="vpn_connect_to" msgid="216709261691085594">"Conectar a <xliff:g id="PROFILE">%s</xliff:g>"</string>
     <string name="vpn_disconnect_confirm" msgid="6356789348816854539">"Desconectar esta VPN?"</string>
     <string name="vpn_disconnect" msgid="7753808961085867345">"Desconectar"</string>
-    <string name="vpn_version" msgid="41856553718304367">"Versão <xliff:g id="VERSION">%s</xliff:g>"</string>
+    <string name="vpn_version" msgid="6344167191984400976">"Versão"</string>
     <string name="vpn_forget_long" msgid="729132269203870205">"Esquecer VPN"</string>
     <string name="vpn_replace_vpn_title" msgid="3994226561866340280">"Substituir VPN já existente?"</string>
     <string name="vpn_set_vpn_title" msgid="1667539483005810682">"Configurar VPN sempre ativa?"</string>
@@ -3657,14 +3657,14 @@
     <string name="zen_mode_settings_category" msgid="3794956668816783447">"Permitir interrupções que emitem sons"</string>
     <string name="zen_mode_visual_interruptions_settings_title" msgid="7806181124566937214">"Bloquear perturbações visuais"</string>
     <string name="zen_mode_visual_signals_settings_subtitle" msgid="7433077540895876672">"Permitir sinais visuais"</string>
-    <string name="zen_mode_restrict_notifications_title" msgid="4169952466106040297">"Exibir opções para notificações ocultas"</string>
+    <string name="zen_mode_restrict_notifications_title" msgid="4169952466106040297">"Mostrar opções para notificações ocultas"</string>
     <string name="zen_mode_restrict_notifications_category" msgid="5870944770935394566">"Quando o Não perturbe estiver ativado"</string>
     <string name="zen_mode_restrict_notifications_mute" msgid="6692072837485018287">"Desativar som de notificações"</string>
     <string name="zen_mode_restrict_notifications_mute_summary" msgid="966597459849580949">"Você verá as notificações na sua tela"</string>
-    <string name="zen_mode_restrict_notifications_mute_footer" msgid="2152115038156049608">"Quando houver notificações, o smartphone não emitirá nenhum som ou vibração."</string>
+    <string name="zen_mode_restrict_notifications_mute_footer" msgid="2152115038156049608">"O smartphone não vai emitir nenhum som ou vibrar ao receber notificações."</string>
     <string name="zen_mode_restrict_notifications_hide" msgid="5997930361607752541">"Ocultar avisos visuais ou sonoros de notificações"</string>
     <string name="zen_mode_restrict_notifications_hide_summary" msgid="6005445725686969583">"Você não verá nem ouvirá notificações"</string>
-    <string name="zen_mode_restrict_notifications_hide_footer" msgid="4314772315731485747">"Seu smartphone não mostrará notificações novas ou existentes nem emitirá sons ou vibrações para elas. Lembre-se de que as notificações essenciais à atividade e ao status do smartphone ainda serão exibidas.\n\nDepois de desativar o Não perturbe, deslize de cima para baixo na tela para ver as notificações perdidas."</string>
+    <string name="zen_mode_restrict_notifications_hide_footer" msgid="4314772315731485747">"Seu smartphone não vai mostrar notificações novas ou existentes nem emitir sons ou vibrações para elas. Lembre-se de que as notificações essenciais à atividade e ao status do smartphone ainda serão exibidas.\n\nDepois de desativar o Não perturbe, deslize de cima para baixo na tela para ver as notificações perdidas."</string>
     <string name="zen_mode_restrict_notifications_custom" msgid="5469078057954463796">"Personalizado"</string>
     <string name="zen_mode_restrict_notifications_enable_custom" msgid="4303255634151330401">"Ativar configuração personalizada"</string>
     <string name="zen_mode_restrict_notifications_disable_custom" msgid="5062332754972217218">"Remover configuração personalizada"</string>
@@ -3829,7 +3829,7 @@
     <string name="lock_screen_notifs_redact_summary" msgid="1395483766035470612">"Mostrar conteúdo confidencial quando bloqueado"</string>
     <string name="lock_screen_notifs_redact_work" msgid="3833920196569208430">"Notificações confidenciais do perfil de trabalho"</string>
     <string name="lock_screen_notifs_redact_work_summary" msgid="3238238380405430156">"Mostrar conteúdo confidencial do perfil de trabalho quando estiver bloqueado"</string>
-    <string name="lock_screen_notifications_summary_show" msgid="6540443483088311328">"Mostra todo o conteúdo das notificações"</string>
+    <string name="lock_screen_notifications_summary_show" msgid="6540443483088311328">"Mostrar todo o conteúdo das notificações"</string>
     <string name="lock_screen_notifications_summary_hide" msgid="7837303171531166789">"Só mostrar conteúdo confidencial quando desbloqueado"</string>
     <string name="lock_screen_notifications_summary_disable" msgid="3388290397947365744">"Não mostrar nenhuma notificação"</string>
     <string name="lock_screen_notifications_interstitial_message" msgid="4688399629301178487">"Como você quer que a tela de bloqueio seja exibida?"</string>
