--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -1375,7 +1375,7 @@
     <string name="auto_brightness_off_summary" msgid="4993150980274474226">"Не учитывать уровень освещенности"</string>
     <string name="auto_brightness_very_high_summary" msgid="2784981315548144255">"Батарея разряжается быстрее"</string>
     <string name="auto_brightness_disclaimer" msgid="1868395832774087351">"Яркость регулируется с учетом уровня освещенности. При необходимости ее можно временно изменить."</string>
-    <string name="auto_brightness_description" msgid="6807117118142381193">"Яркость экрана будет настраиваться автоматически в зависимости от окружающих условий и ваших действий. Вы сможете регулировать ее и вручную, и тогда ваши предпочтения будут сохраняться."</string>
+    <string name="auto_brightness_description" msgid="6807117118142381193">"Яркость экрана будет настраиваться автоматически в зависимости от окружающих условий и ваших действий. Дополнительно ее можно регулировать вручную, чтобы система учитывала ваши предпочтения."</string>
     <string name="display_white_balance_title" msgid="2624544323029364713">"Баланс белого на экране"</string>
     <string name="display_white_balance_summary" msgid="7625456704950209050"></string>
     <string name="peak_refresh_rate_title" msgid="1878771412897140903">"Плавный экран"</string>
@@ -1398,7 +1398,7 @@
     <string name="auto_rotate_summary_no_permission" msgid="1025061139746254554">"Для работы функции \"Распознавание лиц\" нужен доступ к камере. Нажмите, чтобы настроить разрешения для сервисов персонализации устройств."</string>
     <string name="auto_rotate_manage_permission_button" msgid="2591146085906382385">"Управление разрешениями"</string>
     <string name="night_display_title" msgid="8532432776487216581">"Ночная подсветка"</string>
-    <string name="night_display_text" msgid="4789324042428095383">"С ночной подсветкой экран приобретает желтоватый оттенок. Это снижает напряжение глаз при тусклом свете и может помочь вам быстрее заснуть."</string>
+    <string name="night_display_text" msgid="4789324042428095383">"С ночной подсветкой экран приобретает желтоватый оттенок. Это снижает напряжение глаз и может помочь вам быстрее заснуть."</string>
     <string name="night_display_auto_mode_title" msgid="5869128421470824381">"Расписание"</string>
     <string name="night_display_auto_mode_never" msgid="2721729920187175239">"Нет"</string>
     <string name="night_display_auto_mode_custom" msgid="3938791496034086916">"В выбранное время"</string>
@@ -3307,7 +3307,7 @@
     <string name="vpn_connect_to" msgid="216709261691085594">"Подключение к <xliff:g id="PROFILE">%s</xliff:g>"</string>
     <string name="vpn_disconnect_confirm" msgid="6356789348816854539">"Отключиться от VPN?"</string>
     <string name="vpn_disconnect" msgid="7753808961085867345">"Да"</string>
-    <string name="vpn_version" msgid="41856553718304367">"Версия <xliff:g id="VERSION">%s</xliff:g>"</string>
+    <string name="vpn_version" msgid="6344167191984400976">"Версия"</string>
     <string name="vpn_forget_long" msgid="729132269203870205">"Удалить VPN"</string>
     <string name="vpn_replace_vpn_title" msgid="3994226561866340280">"Сменить текущую VPN-сеть?"</string>
     <string name="vpn_set_vpn_title" msgid="1667539483005810682">"Настроить постоянную VPN-сеть?"</string>
