--- a/res/values-tl/strings.xml
+++ b/res/values-tl/strings.xml
@@ -1313,7 +1313,7 @@
     <string name="accelerometer_summary_on" product="default" msgid="7117139542131700779">"Ilipat nang awtomatiko ang oryentasyon kapag niro-rotate ang telepono"</string>
     <string name="accelerometer_summary_off" product="tablet" msgid="3747370091309939684">"Awtomatikong ilipat ang oryentasyon kapag iniikot ang tablet"</string>
     <string name="accelerometer_summary_off" product="default" msgid="4451125241783158763">"Ilipat nang awtomatiko ang oryentasyon kapag niro-rotate ang telepono"</string>
-    <string name="brightness" msgid="6216871641021779698">"Antas ng brightness"</string>
+    <string name="brightness" msgid="6216871641021779698">"Level ng brightness"</string>
     <string name="brightness_title" msgid="5457874893085305155">"Brightness"</string>
     <string name="brightness_summary" msgid="6309641759293018049">"Ayusin ang liwanag ng screen"</string>
     <string name="auto_brightness_title" msgid="4239324728760986697">"Adaptive brightness"</string>
@@ -3227,7 +3227,7 @@
     <string name="vpn_connect_to" msgid="216709261691085594">"Kumonekta sa <xliff:g id="PROFILE">%s</xliff:g>"</string>
     <string name="vpn_disconnect_confirm" msgid="6356789348816854539">"Putulin ang koneksyon ng VPN na ito?"</string>
     <string name="vpn_disconnect" msgid="7753808961085867345">"Putulin ang koneksyon"</string>
-    <string name="vpn_version" msgid="41856553718304367">"Bersyon <xliff:g id="VERSION">%s</xliff:g>"</string>
+    <string name="vpn_version" msgid="6344167191984400976">"Bersyon"</string>
     <string name="vpn_forget_long" msgid="729132269203870205">"Kalimutan ang VPN"</string>
     <string name="vpn_replace_vpn_title" msgid="3994226561866340280">"Gusto mo bang palitan ang dati nang VPN?"</string>
     <string name="vpn_set_vpn_title" msgid="1667539483005810682">"Gusto mo bang itakda ang VPN na palaging naka-on?"</string>
