--- a/res/values-zu/strings.xml
+++ b/res/values-zu/strings.xml
@@ -3228,7 +3228,7 @@
     <string name="vpn_connect_to" msgid="216709261691085594">"Xhuma ku-<xliff:g id="PROFILE">%s</xliff:g>"</string>
     <string name="vpn_disconnect_confirm" msgid="6356789348816854539">"Nqamula le-VPN"</string>
     <string name="vpn_disconnect" msgid="7753808961085867345">"Nqamula"</string>
-    <string name="vpn_version" msgid="41856553718304367">"Inguqulo engu-<xliff:g id="VERSION">%s</xliff:g>"</string>
+    <string name="vpn_version" msgid="6344167191984400976">"Uhlobo"</string>
     <string name="vpn_forget_long" msgid="729132269203870205">"Khohlwa i-VPN"</string>
     <string name="vpn_replace_vpn_title" msgid="3994226561866340280">"Shintshanisa i-VPN ekhona?"</string>
     <string name="vpn_set_vpn_title" msgid="1667539483005810682">"Setha i-VPN ehlala ivuliwe?"</string>
@@ -4123,7 +4123,7 @@
     <string name="zen_mode_events_list" msgid="7191316245742097229">"imicimbi"</string>
     <string name="zen_mode_events_list_first" msgid="7425369082835214361">"Imicimbi"</string>
     <string name="zen_mode_bypassing_apps" msgid="625309443389126481">"Vumela izinhlelo zokusebenza ukubhala ngaphezulu"</string>
-    <string name="zen_mode_bypassing_apps_header" msgid="60083006963906906">"Izinhlelo zokusebenza ezingaphazamisa"</string>
+    <string name="zen_mode_bypassing_apps_header" msgid="60083006963906906">"Ama-app angaphazamisa"</string>
     <string name="zen_mode_bypassing_apps_add_header" msgid="3201829605075172536">"Khetha izinhlelo zokusebenza eziningi"</string>
     <string name="zen_mode_bypassing_apps_none" msgid="7944221631721778096">"Azikho izinhlelo zokusebenza ezikhethiwe"</string>
     <string name="zen_mode_bypassing_apps_subtext_none" msgid="5128770411598722200">"Azikho izinhlelo zokusebenza ezingaphazamisa"</string>
